--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,15 @@
 
     <string name="LOGIN_PREFS">edu.tacoma.uw.webserviceslab.PREFS</string>
     <string name="LOGGEDIN">loggedin</string>
+
+    <string name="CREATE_ITEM_SQL">
+        CREATE TABLE IF NOT EXISTS Food
+        (nameFoodItem TEXT PRIMARY KEY, sizeFoodItem TEXT,
+        PersonID INTEGER, foodType TEXT)
+    </string>
+
+    <string name="DROP_ITEM_SQL">
+        DROP TABLE IF EXISTS Food
+    </string>
+
 </resources>
